Fix issue with dark mode in main tag

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -59,9 +59,12 @@
     }
   }
 
+  main,
   footer {
     background: mat.get-color-from-palette($background, "background");
+  }
 
+  footer {
     .footer-text {
       p,
       a {
